--- a/index.html
+++ b/index.html
@@ -208,35 +208,35 @@
             </div>
             <div class="img-and-caption-container">
                 <div class="card">
-                    <img src="imgs/section-portofolio-imge/pexels-toni-cuenca-585752.jpg" alt="" draggable="false">
+                    <img src="imgs/section-portofolio-imge/pexels-toni-cuenca-585752.jpg" alt="" >
                     <div class="caption">
                         <h2>background</h2>
                         <p>Photography</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="imgs/section-portofolio-imge/pexels-thiago-japyassu-1069798.jpg" alt="" draggable="false">
+                    <img src="imgs/section-portofolio-imge/pexels-thiago-japyassu-1069798.jpg" alt="" >
                     <div class="caption">
                         <h2>background</h2>
                         <p>Photography</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="imgs/section-portofolio-imge/pexels-stephan-seeber-1261728.jpg" alt="" draggable="false">
+                    <img src="imgs/section-portofolio-imge/pexels-stephan-seeber-1261728.jpg" alt="" >
                     <div class="caption">
                         <h2>background</h2>
                         <p>Photography</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="imgs/section-portofolio-imge/pexels-pixabay-270360.jpg" alt="" draggable="false">
+                    <img src="imgs/section-portofolio-imge/pexels-pixabay-270360.jpg" alt="" >
                     <div class="caption">
                         <h2>background</h2>
                         <p>Photography</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="imgs/section-portofolio-imge/pexels-lukas-917463.jpg" alt="" draggable="false">
+                    <img src="imgs/section-portofolio-imge/pexels-lukas-917463.jpg" alt="" >
                     <div class="caption">
                         <h2>background</h2>
                         <p>Photography</p>
@@ -244,21 +244,21 @@
                 </div>
                 <div class="card">
                     <img src="imgs/section-portofolio-imge/landing_page_with_abstract_low_poly_design_2805.jpg" alt=""
-                        draggable="false">
+                        >
                     <div class="caption">
                         <h2>background</h2>
                         <p>Photography</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="imgs/section-portofolio-imge/213469419484090.jpg" alt="" draggable="false">
+                    <img src="imgs/section-portofolio-imge/213469419484090.jpg" alt="" ">
                     <div class="caption">
                         <h2>background</h2>
                         <p>Photography</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="imgs/section-portofolio-imge/16.jpg" alt="" draggable="false">
+                    <img src="imgs/section-portofolio-imge/16.jpg" alt="" ">
                     <div class="caption">
                         <h2>background</h2>
                         <p>Photography</p>
@@ -350,8 +350,8 @@
                     </div>
                     <!-- end header testemonials   -->
 
-                    <div class="TESTIMONIALS-card">
-                        <div>
+                    <div class="TESTIMONIALS-card ">
+                        <div class="flex-align-c-justify-sb">
                             <img src="https://lh3.googleusercontent.com/rWa_5dDfi5nuj_34H3YHCdVf1JjJis9aKGhkVMl5CN-1DrJl_ump02Rq7-X_XNX311o4jso5F9butllNlgDGHrbQgDS4hou_wABXyCJw8-HvvUFZmNHgcBJ1O14A67u0wrzcuDQDHv7x8v8Kuyo1oIowTmVmVMXX9uKU_UGtfNIABUI7_iJ-iCc2rgTqjEeBTpdxjGKh5mKruNli_S-fGaCNaZq2x7NnWbT_XPHXF-M4SfSDJevF5F91iY5xafLaKjh5UaSaM_fQsjYW_G_SupRgCP2pYdIuqbliL99NLST_3CeAq3z12YaJmS6-CueWy3dZzHiTGIY561rP38aKVHtmks_ivUFbjei3kKz_KCG6EWKJxZu3KKEQyOQEq4xYWC8QvEDPT8VVDRfQyfr2xIWpBYGGTiaEjsqLPmq2PeQfJFsafsWQWWb5nPBTIyN0fUeQjnLEi0NaiTQtyk3zuzdyFel9RnHdOtDrYxmLkqxSqSW-xKDC_3VOq_MVxXsmfBGTsxj9oMh__PnTcS75CA8BDAxDGG6WrToqUbQDrxCM_O-goMY5q0vkVSD6y8YHYqQSMGsNyOvTfuBerD5vsaSJ3PmyEyyQVcfMEc0UxMvZBHkeBnq35sYupsRpApzNkNim_WH5elnM6nMxPmJTqEcRurd6Z5T4LBl2lHdDRt40YwGehM5GLd2gJY6kaHnYs4ihDD91edXE_K75YQE_MLzEIcOiOQtvKaY__BsjAL9xbepevxnH16hn9zfni9-fceDYCLIp1gUzbdww0By60I483Dfc4zo_mS3DBXThhw3mu9O6-Zv_yz4eWZX9DUr7UxEP4R6UjUxcKEMtcLvYUuoa6zXRlcqOmo0cr66szHzkpQu9piRGaWCESqj4UzMpU1SiLYIAiDt2eVtz1NO6KZ2WtVPqiQryZR9hR8GdtVGLOpSjUJ5qXrnCeJ2zpG528a-6jrmIIShOmqj2JeVJ=w640-h640-s-no?authuser=0" alt="">
                             <p>What I like most about Ahmed Hatem is the organization and speed in doing business
                                 <span>eman , elshnawey</span>
@@ -361,7 +361,7 @@
 
                     </div>
                     <div class="TESTIMONIALS-card">
-                        <div>
+                        <div class="flex-align-c-justify-sb">
                             <img src="https://lh3.googleusercontent.com/WOT5Phjg3zThp39QxDsjbR5BKhbHwE4ReDj8glgoCXifUboDPIjKzRIICOskSdSY2Db6aveTb58qqH3E1XGQ40Wb640nr7aDrq6eH-ik_g00W6ov9PSFdn-csd15NpifCf6cy-AFXZysywbp4IGCB_AU5tWSkP3G2_htw1LRipys5FbdeBEKhSmtzsRIZzYXsfZE5bbfOzjFA6O7hOZPb3GnpT9XXkLeeMRUNmsBRGGPWvAzwWjLYRo07C2FJ7t069G_zCuZYDWBy_wU0Ip4AI89VGTIIj38nro8DdFxxNeu2IUhSx_VjhhuYFqMD0Z1EcV22yASOqeXlgA30RzN2Z8bZYIFrUw6HRXjJMIP9jYs9vTGTpGzTvbTrkXcd5DD_BO18mWs_JBOI0mc1TG9xzgX9FiiAWMPWWBC4dnSvw1TRltiBAV7QcMCLA6GSo9w6uMDa2MUG787bRap_t46Vj4qSfqT4fCXv-EvNqeLomabqygz9etF9vgvcmSRjrfIvL_o_kCMER04jbsnVlBobzzwiGIZJkvJyekae15Bz7tDSSxXkjiH2mSzXaUV7aJUUwX51_yKH61wjsc-Pkxvr8D56rdlNoAib7E4p9T_C-XkTfHXS7RbHjU9jcvqF4PHGmJ8a9Avwb4qv8uTYpubMIPvaCrXgi_MO4dWu-kzoyxWtZi_F4qgOegtjO6mPVKdf62CZ0M-J4Rts6dze7h10LtGXPRjHyUpMLdwj0Ki5vMbMAefoXXmXrA3LB2k65RzKbTK2sMT7F2e71tf_cnTgAwl7OKdQJFPNEYaIssduggYkrEsxBA5HwQ0pSBHwK-tShGC_le7UuHBiMwVxiDHUFxwsbu9gNXM-2amO1_scpXo9RP1RLJWEuYGLCkkNNp5lOuUG7SD_PM8HMOll16Sn495aRYq5o47lY-sxGQ1jLJ6onQuyQbFnzILzx3nlhkls5u-ZMfSW6ApXzwenWQK=w539-h550-s-no?authuser=0" alt="">
                             <p>I am very satisfied with my experience with Ahmed Hatem
                                 <span>Mohamed Ibrahim</span>
@@ -509,7 +509,7 @@
         <!-- start section-subscribe-10  -->
 
         <section class="subscribe overlay">
-            <div class="container">
+            <div class="container flex-align-c-justify-sb">
                 <div>
                     <form action="" method="post">
                         <i class="fas fa-envelope"></i>
