editing html and css file and ching imgs

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <section class="mobile overlay">
             <div class="mobile-content flex-align-c-justify-sb">
                 <div class="img-mobile">
-                    <img src="https://lh3.googleusercontent.com/0LykeQ2v2eJDKu2UXCvMaAFFUqYZmqrrwmgoo7bFKTi9s1IMSeImsfa71z_Qv0ojSDphxvdvYpqOZfi-GBQMybREqzM2nrYQLfnuebaQYILgR4-Jp6VrvV_JhxRqY8polMinZm9lR4atIN5_5f3nQHGfPU_kI46k00nDpP40kZ6OBAaM3xLuStNzrbLuroZ7Vzshff975V9_EyeFGUCx2hr-CnbOSeQ0WRcG-rZaNhoaEp_S2geGwaezOZ_RUawpKvRLCtc6RXTxInsYZcjCkOJZy0vn-y3yNYr-wqkVr_pA5iVSBpJWBD9DRi9--rTT-cusjLoPcEvIXxOmaf-ooah2TgpvsL11jHu6AJNrDi7u-RMyXuExCct8zx4OhFSQLJ6eUXkq3b2dHnqxIb7CTlcNjSwo1ZoUKpeJ1v-J14zj6iHlOjOYFkyKggHSZuJwCJHcP6NzyA0V3fcVhQXzD45fCjD9hlj2x_pFd_pOFCVz3MZA1Zqr-c287CyKz2FXxlAZOR2OJDq1G6LhniC61qsxk7lvJM-BIvujGSJNCS4Pf4CSUkG5IRIjNHOxq38oTiX1OeYlfYvNMCAvbEyJnd4Qtp7d5LP9ijlSztY0H7UXDKlTvG2td-70emsitylRfDpVfAdg3Ckfk7_ybThluJOPnbKGr0c1P-L4BgAxdhcZsn9Ojt5hCY5SuYJYCJZjrcwrffoXqzmF58sfx_uSqw6lSXG2jIoqFl4CzrNDLrTlAYLQc_q98hx-F5CCmVGt9kepJKyraq0oVZ3OWN8coQi6HBwJMF8_wiP2F9RyTzyUPQnInIfjBgs4rIzxK2ESfxbe_vRgUqsae0EI0cpKsy_lgEAQP_0LB2nHDMLqIgYrisM9wL9bgeovLUjNC9moIVHWHIghQjQyj7f9DchuWMkBk4zb-SukvHz81MRIMmg1ht3tC8vP5qEDs_cPzYyjErkxUIlaT0ZigDOcpIll=w1423-h1423-s-no?authuser=0" alt="">
+                    <img src="imgs/mobile-img.png" alt="">
                 </div>
                 <div class="mobile-text">
                     <h2>OUR DESIGN COMES WITH... </h2>
@@ -293,7 +293,7 @@
                     <p>Always be the first version of yourself,never the second version of anyone else .</p>
                 </div>
                 <div class="img-taplet">
-                    <img src="https://lh3.googleusercontent.com/wTq_E5LxQBm0teO2TpgR5vpucfAMW3ddU9SsQAGgXgC_COZnrgiw5v76QdKpTwK6PJuD_U6PmHYXdHjL-nSO-djYvBx5sJDx6OmM52ZPMjB8XA18WVghGWQHWfUE3oTsSs7hJtdLptj3TT5eASV5PmiiVOmy5AqOT9jOaczCyVgvEadC3ov507-SBHqm4ubsona2474w92TEnD7xnBoB34m64NVoZWbI12FAf-tRYybS9zZnMQstMdNBAkbgaHFRW-Gd6CDdGgifwTpHQBmz0CJZx-YaeM02YC99WikHZcaCV4ZTeWaZfaUXNcV3JEh-3uhpvO7L1BMQBLZ6M5US4wg98IJ1mTCKi25vnPkCbUyIDq-usVVDVS3ssVCbZtcOZmUN9Z_oBXTTU06jiMZ4zvAOR0DhuPqVwZVRIZUvHP7vT_l2ygCZ5a8iMYcnUwtZcbko9JG3NkVKMY0hmuw_78kGWwl-uu2rZ0g5Z2MVhb4tRvQ0xgcvBKc43xoEgruh9Jluw2D5tLW2o9Mj_IjPWu6ckxeAiuZ6b5WewMICZZNsuUApuXQcHx40CFcx402fWIfDbhVMuQJnqvOgxbX2BouwGaESIn0LsevNlnnNsxN0_6kZ375P1sntKGmzp6w6rYpYhSkRXwuAbdXdiocVBq3ls4A9BoQk3zPwYfuKm_MdhXkRyQfGOAjmG_EXemiNj0sRiKpxKVWRBrYI8z6NX6w53-s4FXZWwr0jC6luuLR80NDbyFTnx_xW53sduWAdwITM-7BmLhUYgjpTk7NdGp5RNTP_RXabwdgqEyQDH8gNFFZB98SAbJKB5m-TfU-D8hZbXaP-BVdyIKr9uGAcq2cEW9dfcHRF8pIBXqfID9bTTn6xXuGVlbGrqKfRyqXASmvulH2u7d9NHR3ToPnAaj6vQVll2QSzXkxMQ1HAnZy0hs02g2xkIt2BZMnemFroAw2Ms3LrPNItP0rvFeMB=w739-h376-s-no?authuser=0" alt="">
+                    <img src="imgs/about taplet.png" alt="">
                 </div>
             </div>
 
@@ -352,7 +352,7 @@
 
                     <div class="TESTIMONIALS-card ">
                         <div class="flex-align-c-justify-sb">
-                            <img src="https://lh3.googleusercontent.com/rWa_5dDfi5nuj_34H3YHCdVf1JjJis9aKGhkVMl5CN-1DrJl_ump02Rq7-X_XNX311o4jso5F9butllNlgDGHrbQgDS4hou_wABXyCJw8-HvvUFZmNHgcBJ1O14A67u0wrzcuDQDHv7x8v8Kuyo1oIowTmVmVMXX9uKU_UGtfNIABUI7_iJ-iCc2rgTqjEeBTpdxjGKh5mKruNli_S-fGaCNaZq2x7NnWbT_XPHXF-M4SfSDJevF5F91iY5xafLaKjh5UaSaM_fQsjYW_G_SupRgCP2pYdIuqbliL99NLST_3CeAq3z12YaJmS6-CueWy3dZzHiTGIY561rP38aKVHtmks_ivUFbjei3kKz_KCG6EWKJxZu3KKEQyOQEq4xYWC8QvEDPT8VVDRfQyfr2xIWpBYGGTiaEjsqLPmq2PeQfJFsafsWQWWb5nPBTIyN0fUeQjnLEi0NaiTQtyk3zuzdyFel9RnHdOtDrYxmLkqxSqSW-xKDC_3VOq_MVxXsmfBGTsxj9oMh__PnTcS75CA8BDAxDGG6WrToqUbQDrxCM_O-goMY5q0vkVSD6y8YHYqQSMGsNyOvTfuBerD5vsaSJ3PmyEyyQVcfMEc0UxMvZBHkeBnq35sYupsRpApzNkNim_WH5elnM6nMxPmJTqEcRurd6Z5T4LBl2lHdDRt40YwGehM5GLd2gJY6kaHnYs4ihDD91edXE_K75YQE_MLzEIcOiOQtvKaY__BsjAL9xbepevxnH16hn9zfni9-fceDYCLIp1gUzbdww0By60I483Dfc4zo_mS3DBXThhw3mu9O6-Zv_yz4eWZX9DUr7UxEP4R6UjUxcKEMtcLvYUuoa6zXRlcqOmo0cr66szHzkpQu9piRGaWCESqj4UzMpU1SiLYIAiDt2eVtz1NO6KZ2WtVPqiQryZR9hR8GdtVGLOpSjUJ5qXrnCeJ2zpG528a-6jrmIIShOmqj2JeVJ=w640-h640-s-no?authuser=0" alt="">
+                            <img src="imgs/file.jpg" alt="">
                             <p>What I like most about Ahmed Hatem is the organization and speed in doing business
                                 <span>eman , elshnawey</span>
                             </p>
@@ -362,7 +362,7 @@
                     </div>
                     <div class="TESTIMONIALS-card">
                         <div class="flex-align-c-justify-sb">
-                            <img src="https://lh3.googleusercontent.com/WOT5Phjg3zThp39QxDsjbR5BKhbHwE4ReDj8glgoCXifUboDPIjKzRIICOskSdSY2Db6aveTb58qqH3E1XGQ40Wb640nr7aDrq6eH-ik_g00W6ov9PSFdn-csd15NpifCf6cy-AFXZysywbp4IGCB_AU5tWSkP3G2_htw1LRipys5FbdeBEKhSmtzsRIZzYXsfZE5bbfOzjFA6O7hOZPb3GnpT9XXkLeeMRUNmsBRGGPWvAzwWjLYRo07C2FJ7t069G_zCuZYDWBy_wU0Ip4AI89VGTIIj38nro8DdFxxNeu2IUhSx_VjhhuYFqMD0Z1EcV22yASOqeXlgA30RzN2Z8bZYIFrUw6HRXjJMIP9jYs9vTGTpGzTvbTrkXcd5DD_BO18mWs_JBOI0mc1TG9xzgX9FiiAWMPWWBC4dnSvw1TRltiBAV7QcMCLA6GSo9w6uMDa2MUG787bRap_t46Vj4qSfqT4fCXv-EvNqeLomabqygz9etF9vgvcmSRjrfIvL_o_kCMER04jbsnVlBobzzwiGIZJkvJyekae15Bz7tDSSxXkjiH2mSzXaUV7aJUUwX51_yKH61wjsc-Pkxvr8D56rdlNoAib7E4p9T_C-XkTfHXS7RbHjU9jcvqF4PHGmJ8a9Avwb4qv8uTYpubMIPvaCrXgi_MO4dWu-kzoyxWtZi_F4qgOegtjO6mPVKdf62CZ0M-J4Rts6dze7h10LtGXPRjHyUpMLdwj0Ki5vMbMAefoXXmXrA3LB2k65RzKbTK2sMT7F2e71tf_cnTgAwl7OKdQJFPNEYaIssduggYkrEsxBA5HwQ0pSBHwK-tShGC_le7UuHBiMwVxiDHUFxwsbu9gNXM-2amO1_scpXo9RP1RLJWEuYGLCkkNNp5lOuUG7SD_PM8HMOll16Sn495aRYq5o47lY-sxGQ1jLJ6onQuyQbFnzILzx3nlhkls5u-ZMfSW6ApXzwenWQK=w539-h550-s-no?authuser=0" alt="">
+                            <img src="imgs/images.jpg" alt="">
                             <p>I am very satisfied with my experience with Ahmed Hatem
                                 <span>Mohamed Ibrahim</span>
                             </p>
